# financial-advisor

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  INVESTMENT_EXAMPLES.md  Makefile  README.md  README_FOR_BEGINNERS.md  USER_GUIDE.md  app_streamlit.py  docker-compose.yml  example.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
advanced/api_fastapi/: main.py
advanced/dbt_project/: README.md  dbt_project.yml  profiles.yml  profiles.yml.example
advanced/dbt_project/models/features/: .gitkeep  betas.sql  credit_indicators.sql  credit_risk.sql  earnings.sql  esg.sql  esg_indicators.sql  idiosyncratic_residuals.sql  liquidity.sql  (+9 more)
advanced/dbt_project/seeds/: sample_stock_prices.csv
advanced/feast_repo/: data_sources.py  entities.py  feature_store.yaml  feature_views.py
advanced/feast_repo/data/: online_store.db  registry.db
advanced/utils/: mlflow_logger.py
docs/: country_map.csv  policies.yaml  report_template.md  sector_map.csv  theme_map.csv
docs/http/: collection.http
docs/postman/: finai.postman_collection.json
docs/sql/: pgvector_schema.sql
financial_advisor/: __init__.py  policy_engine.py
scripts/: bench_compare_mv_cvar.py  bench_generate_scenarios.py  bootstrap_with_commits.sh  generate_architecture.py  generate_dbt_featurestore_flow.py  generate_sequence.py  render_report.py
src/rag/: .gitkeep  __init__.py  cli_ingest_pgvector.py  rag_minimal.py  rag_pgvector.py
tests/: __init__.py  test_feast_features.py  test_hhi_repair.py  test_mu_tilt.py  test_mv_opt.py  test_policy_engine.py
